M1/TheoLang/TP/autocell/parser.output
   0  $accept : %entry% $end

   1  program : INT DIMENSIONS OF config END opt_statements EOF

   2  config : INT DOT_DOT INT
   3         | fields

   4  fields : field
   5         | fields COMMA field

   6  field : ID OF INT DOT_DOT INT

   7  opt_statements :
   8                 | statement opt_statements

   9  statement : cell ASSIGN e
  10            | ID ASSIGN e

  11  cell : LBRACKET INT COMMA INT RBRACKET

  12  e : e PLUS t
  13    | e MINUS t
  14    | t

  15  t : t MULT f
  16    | t DIV f
  17    | t MOD f
  18    | f

  19  f : cell
  20    | MINUS f
  21    | INT
  22    | ID
  23    | OPARA e FPARA

  24  %entry% : '\001' program

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	.  error

	%entry%  goto 2


state 1
	%entry% : '\001' . program  (24)

	INT  shift 3
	.  error

	program  goto 4


state 2
	$accept : %entry% . $end  (0)

	$end  accept


state 3
	program : INT . DIMENSIONS OF config END opt_statements EOF  (1)

	DIMENSIONS  shift 5
	.  error


state 4
	%entry% : '\001' program .  (24)

	.  reduce 24


state 5
	program : INT DIMENSIONS . OF config END opt_statements EOF  (1)

	OF  shift 6
	.  error


state 6
	program : INT DIMENSIONS OF . config END opt_statements EOF  (1)

	ID  shift 7
	INT  shift 8
	.  error

	config  goto 9
	fields  goto 10
	field  goto 11


state 7
	field : ID . OF INT DOT_DOT INT  (6)

	OF  shift 12
	.  error


state 8
	config : INT . DOT_DOT INT  (2)

	DOT_DOT  shift 13
	.  error


state 9
	program : INT DIMENSIONS OF config . END opt_statements EOF  (1)

	END  shift 14
	.  error


state 10
	config : fields .  (3)
	fields : fields . COMMA field  (5)

	COMMA  shift 15
	END  reduce 3


state 11
	fields : field .  (4)

	.  reduce 4


state 12
	field : ID OF . INT DOT_DOT INT  (6)

	INT  shift 16
	.  error


state 13
	config : INT DOT_DOT . INT  (2)

	INT  shift 17
	.  error


state 14
	program : INT DIMENSIONS OF config END . opt_statements EOF  (1)
	opt_statements : .  (7)

	LBRACKET  shift 18
	ID  shift 19
	EOF  reduce 7

	opt_statements  goto 20
	statement  goto 21
	cell  goto 22


state 15
	fields : fields COMMA . field  (5)

	ID  shift 7
	.  error

	field  goto 23


state 16
	field : ID OF INT . DOT_DOT INT  (6)

	DOT_DOT  shift 24
	.  error


state 17
	config : INT DOT_DOT INT .  (2)

	.  reduce 2


state 18
	cell : LBRACKET . INT COMMA INT RBRACKET  (11)

	INT  shift 25
	.  error


state 19
	statement : ID . ASSIGN e  (10)

	ASSIGN  shift 26
	.  error


state 20
	program : INT DIMENSIONS OF config END opt_statements . EOF  (1)

	EOF  shift 27
	.  error


state 21
	opt_statements : statement . opt_statements  (8)
	opt_statements : .  (7)

	LBRACKET  shift 18
	ID  shift 19
	EOF  reduce 7

	opt_statements  goto 28
	statement  goto 21
	cell  goto 22


state 22
	statement : cell . ASSIGN e  (9)

	ASSIGN  shift 29
	.  error


state 23
	fields : fields COMMA field .  (5)

	.  reduce 5


state 24
	field : ID OF INT DOT_DOT . INT  (6)

	INT  shift 30
	.  error


state 25
	cell : LBRACKET INT . COMMA INT RBRACKET  (11)

	COMMA  shift 31
	.  error


state 26
	statement : ID ASSIGN . e  (10)

	LBRACKET  shift 18
	OPARA  shift 32
	MINUS  shift 33
	ID  shift 34
	INT  shift 35
	.  error

	cell  goto 36
	e  goto 37
	t  goto 38
	f  goto 39


state 27
	program : INT DIMENSIONS OF config END opt_statements EOF .  (1)

	.  reduce 1


state 28
	opt_statements : statement opt_statements .  (8)

	.  reduce 8


state 29
	statement : cell ASSIGN . e  (9)

	LBRACKET  shift 18
	OPARA  shift 32
	MINUS  shift 33
	ID  shift 34
	INT  shift 35
	.  error

	cell  goto 36
	e  goto 40
	t  goto 38
	f  goto 39


state 30
	field : ID OF INT DOT_DOT INT .  (6)

	.  reduce 6


state 31
	cell : LBRACKET INT COMMA . INT RBRACKET  (11)

	INT  shift 41
	.  error


state 32
	f : OPARA . e FPARA  (23)

	LBRACKET  shift 18
	OPARA  shift 32
	MINUS  shift 33
	ID  shift 34
	INT  shift 35
	.  error

	cell  goto 36
	e  goto 42
	t  goto 38
	f  goto 39


state 33
	f : MINUS . f  (20)

	LBRACKET  shift 18
	OPARA  shift 32
	MINUS  shift 33
	ID  shift 34
	INT  shift 35
	.  error

	cell  goto 36
	f  goto 43


state 34
	f : ID .  (22)

	.  reduce 22


state 35
	f : INT .  (21)

	.  reduce 21


state 36
	f : cell .  (19)

	.  reduce 19


state 37
	statement : ID ASSIGN e .  (10)
	e : e . PLUS t  (12)
	e : e . MINUS t  (13)

	PLUS  shift 44
	MINUS  shift 45
	EOF  reduce 10
	LBRACKET  reduce 10
	ID  reduce 10


state 38
	e : t .  (14)
	t : t . MULT f  (15)
	t : t . DIV f  (16)
	t : t . MOD f  (17)

	MULT  shift 46
	DIV  shift 47
	MOD  shift 48
	EOF  reduce 14
	LBRACKET  reduce 14
	FPARA  reduce 14
	PLUS  reduce 14
	MINUS  reduce 14
	ID  reduce 14


state 39
	t : f .  (18)

	.  reduce 18


state 40
	statement : cell ASSIGN e .  (9)
	e : e . PLUS t  (12)
	e : e . MINUS t  (13)

	PLUS  shift 44
	MINUS  shift 45
	EOF  reduce 9
	LBRACKET  reduce 9
	ID  reduce 9


state 41
	cell : LBRACKET INT COMMA INT . RBRACKET  (11)

	RBRACKET  shift 49
	.  error


state 42
	e : e . PLUS t  (12)
	e : e . MINUS t  (13)
	f : OPARA e . FPARA  (23)

	FPARA  shift 50
	PLUS  shift 44
	MINUS  shift 45
	.  error


state 43
	f : MINUS f .  (20)

	.  reduce 20


state 44
	e : e PLUS . t  (12)

	LBRACKET  shift 18
	OPARA  shift 32
	MINUS  shift 33
	ID  shift 34
	INT  shift 35
	.  error

	cell  goto 36
	t  goto 51
	f  goto 39


state 45
	e : e MINUS . t  (13)

	LBRACKET  shift 18
	OPARA  shift 32
	MINUS  shift 33
	ID  shift 34
	INT  shift 35
	.  error

	cell  goto 36
	t  goto 52
	f  goto 39


state 46
	t : t MULT . f  (15)

	LBRACKET  shift 18
	OPARA  shift 32
	MINUS  shift 33
	ID  shift 34
	INT  shift 35
	.  error

	cell  goto 36
	f  goto 53


state 47
	t : t DIV . f  (16)

	LBRACKET  shift 18
	OPARA  shift 32
	MINUS  shift 33
	ID  shift 34
	INT  shift 35
	.  error

	cell  goto 36
	f  goto 54


state 48
	t : t MOD . f  (17)

	LBRACKET  shift 18
	OPARA  shift 32
	MINUS  shift 33
	ID  shift 34
	INT  shift 35
	.  error

	cell  goto 36
	f  goto 55


state 49
	cell : LBRACKET INT COMMA INT RBRACKET .  (11)

	.  reduce 11


state 50
	f : OPARA e FPARA .  (23)

	.  reduce 23


state 51
	e : e PLUS t .  (12)
	t : t . MULT f  (15)
	t : t . DIV f  (16)
	t : t . MOD f  (17)

	MULT  shift 46
	DIV  shift 47
	MOD  shift 48
	EOF  reduce 12
	LBRACKET  reduce 12
	FPARA  reduce 12
	PLUS  reduce 12
	MINUS  reduce 12
	ID  reduce 12


state 52
	e : e MINUS t .  (13)
	t : t . MULT f  (15)
	t : t . DIV f  (16)
	t : t . MOD f  (17)

	MULT  shift 46
	DIV  shift 47
	MOD  shift 48
	EOF  reduce 13
	LBRACKET  reduce 13
	FPARA  reduce 13
	PLUS  reduce 13
	MINUS  reduce 13
	ID  reduce 13


state 53
	t : t MULT f .  (15)

	.  reduce 15


state 54
	t : t DIV f .  (16)

	.  reduce 16


state 55
	t : t MOD f .  (17)

	.  reduce 17


23 terminals, 12 nonterminals
25 grammar rules, 56 states
